@@ -24,6 +24,8 @@ Version 2.5.0-Beta 1
     * Auto-save the playlist so that it is not lost if Amarok crashes.
 
   CHANGES:
+    * Make delete confirmation dialog text less confusing. Patch by Gilles Habran.
+      (BR 263693)
     * Removed never-working right-mouse-button action to unset iPod album cover.
     * Removed the confusing ability to edit the navigation breadcrumb.
     * BPM is now read from/saved to media devices (e.g. iPod).
